Sidebar menu toggle functionality

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .sidebar {
-  @apply h-screen bg-white flex flex-col max-w-fit p-6;
+  @apply h-screen bg-white flex flex-col w-60 p-6;
 }
 
 .logo {
@@ -27,6 +27,18 @@
   rounded-md bg-slate-300 pt-3 pr-6 pl-6 pb-3 text-lg cursor-pointer;
 }
 
+.projects-menu {
+  @apply flex flex-row gap-2 items-center mt-6 text-lg font-semibold text-blue-500 relative max-h-full;
+}
+
 .projects-menu-items{
-  @apply flex flex-col absolute bottom-2;
+  @apply flex flex-col pl-6 text-blue-500 font-semibold;
+}
+
+.menu{
+  @apply pt-1 pb-1 pl-2;
+}
+
+.menu:hover{
+  @apply bg-slate-200 rounded-sm;
 }
