--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,15 @@
 @tailwind utilities;
 
 .App {
-  @apply h-screen w-screen bg-slate-100;
+  @apply h-screen w-screen bg-slate-200 overflow-y-hidden;
+}
+
+.app-layout{
+  @apply flex flex-row gap-2;
 }
 
 .sidebar {
-  @apply h-screen bg-white flex flex-col w-60 p-6;
+  @apply h-screen bg-white flex flex-col w-52 p-6;
 }
 
 .logo {
@@ -41,4 +45,12 @@
 
 .menu:hover{
   @apply bg-slate-200 rounded-sm;
+}
+
+.project-card{
+  @apply p-7 bg-white rounded-lg;
+}
+
+.project-list{
+  @apply grid grid-cols-3 gap-2;
 }
