--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -1,3 +1,3 @@
 .board{
-    @apply w-full h-screen flex flex-row overflow-scroll gap-4;
+    @apply w-full h-screen overflow-y-hidden flex flex-row overflow-x-scroll gap-2;
 }
