--- a/src/components/droppable/droppable.css
+++ b/src/components/droppable/droppable.css
@@ -1,3 +1,7 @@
 .droppable{
-    @apply p-2 bg-white rounded-sm  overflow-y-scroll;
+    @apply p-4 bg-white rounded-sm  overflow-y-scroll h-full;
+}
+
+.droppable::-webkit-scrollbar {
+   @apply hidden;
 }
