--- a/src/components/auth/login/Login.css
+++ b/src/components/auth/login/Login.css
@@ -1,5 +1,5 @@
 .login-wrapper{
-    @apply w-screen h-screen flex flex-row justify-center items-center bg-white;
+    @apply w-screen h-screen flex flex-row justify-center items-center bg-slate-200;
 }
 
 .login-screens{
@@ -7,23 +7,24 @@
 }
 
 .login{
-    @apply p-10 shadow-lg shadow-black rounded-md;
+    @apply p-10 rounded-md bg-white;
 }
 
 .login-message{
-    @apply text-center font-semibold text-xl;
+    @apply text-center font-semibold text-2xl text-red-700;
 }
 
 .login-message h2::after{
     @apply h-2 w-full bg-blue-400;
 }
 
-.login-form{
+.login-form {
     @apply pt-2;
 }
 
 .login-input{
-    @apply flex flex-row gap-4 p-2 items-center shadow-md shadow-slate-400 rounded-md border-l-4 border-blue-800 m-5;
+    @apply flex flex-row gap-4 items-center rounded-md border-l-4
+     border-blue-800 bg-slate-200 m-2 p-4 w-80 h-10;
 }
 
 .login-input span{
@@ -31,11 +32,15 @@
 }
 
 .login-input input{
-    @apply outline-none border-none p-2 w-72 bg-transparent;
+    @apply outline-none border-none bg-transparent;
 }
 
-.forgot-password{
+.forgot-password {
     @apply flex flex-row justify-end;
+}
+
+.forgot-password span {
+    @apply text-blue-600 font-semibold text-sm;
 }
 
 .login-btn-div{
@@ -48,4 +53,12 @@
 
 .login-welcome{
     @apply bg-blue-500 h-4/5 w-2/5;
+}
+
+.register-direction {
+    @apply text-center p-4;
+}
+
+.register-direction span {
+    @apply text-blue-600 font-semibold text-lg;
 }
